<?xml version="1.0"?>
<package format="2">
  <name>wind_aware_ukf</name>
  <version>0.0.1</version>
  <description>Wind estimation via unscented Kalman filtering.</description>

  <maintainer email="sfolk@seas.upenn.edu">Spencer Folk</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>kr_mav_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>crazyflie_driver</build_depend>
  <build_depend>kalman_filter</build_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>kr_mav_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>crazyflie_driver</exec_depend>
  <exec_depend>kalman_filter</exec_depend>

  <export>
  </export>
</package>
